Polar Chart Added

--- a/src/app/my-polar-chart/my-polar-chart.component.html
+++ b/src/app/my-polar-chart/my-polar-chart.component.html
@@ -1,3 +1,11 @@
-<p>
-  my-polar-chart works!
-</p>
+<div>
+    <div style="display: block">
+      <h1 class="text-center">Company returns</h1>
+      <canvas baseChart 
+        [data]="polarChartData"
+        [labels]="polarChartLabels"
+        [legend]="polarChartLegend"
+        [options]="polarChartOptions"
+        [chartType]="polarChartType"></canvas>
+    </div>
+  </div>
