--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -13,8 +13,11 @@
       <a class="nav-link" routerLink="/pie-chart">Pie Chart</a>
     </li>
     <li class="nav-item">
-        <a class="nav-link" routerLink="/line-chart">Line Chart</a>
-      </li>
+      <a class="nav-link" routerLink="/line-chart">Line Chart</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link" routerLink="/polar-chart">Polar Chart</a>
+    </li>
   </ul>
 </div>
 <div>
